2013-12-12  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Support 'guidformat' workaround flag.

	* bmc-info/: Fix default GUID output format, one field appears to
	be output incorrectly.
	
2013-12-12  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Support output of System GUID by default and support
	--get-system-guid option.
	
2013-12-12  Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Decimal values that cannot be encoded accurately
	now report a clearer error message through the
	IPMI_CONFIG_VALIDATE_VALUE_CANNOT_BE_ENCODED_ACCURATELY validate
	error code.
	
2013-12-11  Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Re-work error message outputs so fatal error
	messages are always output.
	
2013-12-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-util.c (ipmi_sensor_decode_raw_value):
	Fix error in input checks.
	
2013-12-11  Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-sensors-threshold-section.c:
	Fix error message cut & paste typo.
	
2013-12-05  Albert Chu <chu11@llnl.gov>

	* ipmiseld/ipmiseld.c: Fix error message typo.
	
2013-12-02  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add forgotten manpage.
	
2013-12-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.txi: Update with new information on OS issues.

2013-12-02  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/bmc-watchdog.c (_fiid_obj_get_safe): New function. 

	* bmc-watchdog/bmc-watchdog.c (_get_watchdog_timer_cmd): Use
	_fiid_obj_get_safe and do not exit on data not available errors.
	
2013-11-26  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.txi: Update with new information.
	
2013-11-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c (ipmi_sdr_cache_create):
	Fix bug w/ Fujitsu SDR count workaround.
	
2013-11-14  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/, libipmiconsole/: Support solchannelsupport
	workaround option /
	IPMICONSOLE_WORKAROUND_SKIP_CHANNEL_PAYLOAD_SUPPORT workaround
	flag.
	
2013-11-13  Albert Chu <chu11@llnl.gov>
