@@ -515,6 +515,15 @@ _calculate_record_ids (ipmi_sensors_state_data_t *state_data,
           
           output_record_ids[(*output_record_ids_length)] = record_id;
           (*output_record_ids_length)++;
+
+	  if (output_record_ids_length >= MAX_SENSOR_RECORD_IDS)
+	    {
+	      pstdout_fprintf (state_data->pstate,
+			       stderr,
+			       "Too many sensors found on system; limit is %u\n",
+			       MAX_SENSOR_RECORD_IDS);
+	      return (-1);
+	    }
         }
     }
   else if (state_data->prog_data->args->record_ids_length)
@@ -573,6 +582,15 @@ _calculate_record_ids (ipmi_sensors_state_data_t *state_data,
           
           output_record_ids[(*output_record_ids_length)] = state_data->prog_data->args->record_ids[i];
           (*output_record_ids_length)++;
+
+	  if (output_record_ids_length >= MAX_SENSOR_RECORD_IDS)
+	    {
+	      pstdout_fprintf (state_data->pstate,
+			       stderr,
+			       "Too many sensors specified; limit is %u\n",
+			       MAX_SENSOR_RECORD_IDS);
+	      return (-1);
+	    }
         }
     }
   else /* state_data->prog_data->args->sensor_types_length */
@@ -634,6 +652,15 @@ _calculate_record_ids (ipmi_sensors_state_data_t *state_data,
           
           output_record_ids[(*output_record_ids_length)] = record_id;
           (*output_record_ids_length)++;
+	  
+	  if (output_record_ids_length >= MAX_SENSOR_RECORD_IDS)
+	    {
+	      pstdout_fprintf (state_data->pstate,
+			       stderr,
+			       "Too many sensors found on system; limit is %u\n",
+			       MAX_SENSOR_RECORD_IDS);
+	      return (-1);
+	    }
         }
     }
 
